<resources>
    <string name="app_name">蜗壳</string>
    <string name="running_time">00:00:00</string>
    <string name="running_pace">0</string>
    <string name="running_distance">0</string>
    <string name="running_energy">0</string>
    <string name="running_speed">0</string>
    <string name="name">Vonlion</string>
    <!--<drawable name="sliding_menu_button1_normal">#ddba8557</drawable>-->
    <!--<drawable name="sliding_menu_button1_pressed">#dd865b31</drawable>-->
    <string name="head_portrait">@drawable/head_portrait</string>
    <string name="height">180cm</string>
    <string name="weight">70kg</string>
    <string name="BMI">20.8</string>
    <string name="age">18</string>
    <string name="target">10000 步</string>
    <string name="mydata1">188天</string>
    <string name="mydata2">31200步</string>
    <string name="mydata3">地球0.6圈</string>
    <string name="mydata4">366天</string>
    <string name="histroy_distance">20</string>
    <string name="histroy_time">00:46:23</string>
    <string name="histroy_pace">12000</string>
    <string name="histroy_speed">10</string>
    <string name="histroy_energy">0</string>
    <string name="histroy_date1">2月3日</string>
    <string name="histroy_date2">14:24</string>
    <string name="white">#ffffff</string>
    <string name="location">福建 福州</string>
    <string name="adress">金都上品1-1-1</string>
    <string name="mark">Time is life</string>
    <string name="thumbs_up">26</string>
    <string name="current_time">1小时前</string>
    <string name="article">My father was a self-taught mandolin player. He was one of the best string instrument players in our town. He could not read music, but if he heard a tune a few times, he could play it. When he was younger, he was a member of a small country music b</string>
</resources>
