<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00d9d9d9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout8">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/head_portrait" />
        </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#4d73b3"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/linearLayout8"
                android:layout_toEndOf="@+id/linearLayout8"
                android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/linearLayout8"
            android:layout_toEndOf="@+id/linearLayout8"
            android:id="@+id/textView11" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/rm_bg3"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView11"
            android:layout_marginLeft="60dp"
            android:id="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time"
            android:textColor="#969696"
            android:textSize="10dp"
            android:layout_below="@+id/textView12"
            android:layout_toRightOf="@+id/linearLayout8"
            android:layout_toEndOf="@+id/linearLayout8"
            android:layout_marginTop="10dp"
            android:id="@+id/textView13" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignRight="@+id/textView11"
            android:layout_alignEnd="@+id/textView11"
            android:id="@+id/relativeLayout2"
            android:orientation="horizontal"
            android:layout_marginRight="10dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/follow"
                android:layout_gravity="center_vertical"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thumbs_up"
            android:textColor="#390338"
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7dp"/>
        </LinearLayout>



    </RelativeLayout>



</LinearLayout>