<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/mydata_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#50b5e4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="我的资料"
                android:textColor="#ffffff"
                android:textSize="16dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/RR">
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/img_back"
            android:id="@+id/mydata_back"
            android:onClick="change_alpha"
            android:layout_margin="3dp"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/tool"
            android:onClick="change_alpha2"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"/>
        </RelativeLayout>


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@string/head_portrait"
                android:layout_below="@+id/RR"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageView"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView"
                android:textColor="#FFFFFF"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="身高"
                    android:textColor="#FFFFFF" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="体重"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="BMI"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="目标"
                    android:textColor="#FFFFFF"/>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp">
                <TextView
                    android:id="@+id/tvHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/height"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:id="@+id/tvBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/BMI"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:id="@+id/tvTarget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/target"
                    android:textColor="#FFFFFF"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/mydata_table">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="最长连续打卡"
                android:textColor="#000000"
                android:textSize="13dp"
                android:gravity="center"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mydata1"
                android:textColor="#000000"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mydata1"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/mydata_table">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="单日最长距离"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mydata2"
                android:textColor="#000000"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mydata2"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/mydata_table">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="累计步数"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mydata3"
                android:textColor="#000000"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/mydata3"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/mydata_table">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="累计完成目标"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mydata4"
                android:textColor="#000000"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mydata4"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
