<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00dddddd"
        android:padding="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeffffff">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/head_portrait"
                android:layout_marginLeft="20dp"
                android:id="@+id/imageView3"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24dp"
                android:textColor="#17526b"
                android:layout_marginLeft="20dp"
                android:id="@+id/textView6"
                android:layout_alignTop="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="14dp"
                android:textColor="#8c8d8e"
                android:layout_alignBottom="@+id/imageView3"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="目标: "
                android:textSize="14dp"
                android:textColor="#8c8d8e"
                android:id="@+id/textView8"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignLeft="@+id/textView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target"
                android:textSize="14dp"
                android:textColor="#8c8d8e"
                android:id="@+id/textView7"
                android:layout_above="@+id/textView9"
                android:layout_toRightOf="@+id/textView8"
                android:layout_toEndOf="@+id/textView8" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/follow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36dp"
                android:onClick="follow"
                android:id="@+id/imageView4" />
        </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>