<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00dddddd"
        android:padding="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeffffff">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/head_portrait"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/imageView3"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24dp"
                    android:textColor="#17526b"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/textView6"
                    android:layout_marginStart="20dp"
                    android:layout_alignTop="@+id/imageView4"
                    android:layout_toRightOf="@+id/imageView3"
                    android:layout_toEndOf="@+id/imageView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="今日步数: "
                    android:textSize="16dp"
                    android:textColor="#8c8d8e"
                    android:id="@+id/textView8"
                    android:layout_alignBottom="@+id/imageView4"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/histroy_pace"
                    android:textSize="16dp"
                    android:textColor="#8c8d8e"
                    android:id="@+id/textView7"
                    android:layout_alignTop="@+id/textView8"
                    android:layout_toRightOf="@+id/textView8"
                    android:layout_toEndOf="@+id/textView8" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/right"
                    android:onClick="data"
                    android:id="@+id/imageView4"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView7"
                    android:layout_toEndOf="@+id/textView7"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#159628"
                    android:textSize="20dp"
                    android:text="+"
                    android:layout_marginLeft="11dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView4"
                    android:id="@+id/textView14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#159628"
                    android:textSize="20dp"
                    android:text="@string/thumbs_up"
                    android:layout_alignTop="@+id/textView14"
                    android:layout_toRightOf="@+id/textView14"
                    android:layout_toEndOf="@+id/textView14" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>